# web_proxy

./: .gitignore  .replit  LICENSE  README.md  config.db  main.py  mock_server.py  pyproject.toml  replit.nix
.streamlit/: config.toml
attached_assets/: Pasted-Proxy-Web-Web--1740145191175.txt  Pasted-streamlit-errors-StreamlitAPIException-st-session-state-save-name-input-cannot-be-modified-after-th-1740147373778.txt
pages/: chat.py  home.py  request_management.py  settings.py  simple_qa.py
utils/: api_utils.py  db_utils.py  enhance_prompt.py  kwmatch.py
utils/chat_backends/: README.md  __init__.py  azure_openai.py  azure_openai_legacy.py  manager.py  openai.py
