[project]
name = "repl-nix-workspace"
version = "0.1.0"
description = "Add your description here"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.8",
    "konoha[sudachi]>=5.5.6",
    "openai>=1.63.2",
    "openpyxl>=3.1.5",
    "pydantic>=2.10.6",
    "pyperclip>=1.9.0",
    "streamlit>=1.42.2",
    "sudachipy>=0.6.10",
    "trafilatura>=2.0.0",
    "twilio>=9.4.6",
    "uvicorn>=0.34.0",
]
